--- a/src/Components/AlbumCard.css
+++ b/src/Components/AlbumCard.css
@@ -17,7 +17,7 @@
 .list__info {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid var(--color-primary);
 }
 
 .list__info-author {
