--- a/src/Components/AlbumList.css
+++ b/src/Components/AlbumList.css
@@ -1,4 +1,8 @@
-.album {
+.album h2 {
+    margin-bottom: 0.8rem;
+}
+
+.albumlist {
     background-color: var(--color-background-500);
     list-style: none;
     padding: 3.2rem;
