--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
 :root {
     --color-primary: #993f6c;
     --color-primary-light: #ff69b4;
+    --color-secondary-100: #0000cd;
+    --color-secondary-200: #0000b9;
+    --color-secondary-300: #0000a4;
+    --color-secondary-400: #000090;
+    --color-secondary-light-100: #0000cd;
+    --color-secondary-light-200: #1a1ad2;
+    --color-secondary-light-300: #3333d7;
     --color-background-100: #343a40;
     --color-background-500: #2b3035;
     --color-background-900: #212529;
