--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
     --color-background-900: #212529;
     --color-text: #fff;
     --color-text-artist: #a9a9a9;
+    --color-spinner: #f3f3f3;
 }
 
 * {
