--- a/src/Components/SearchBar.css
+++ b/src/Components/SearchBar.css
@@ -10,10 +10,12 @@
     border: none;
     outline: none;
     text-transform: uppercase;
+    transition: all 0.3s;
 }
 
 .searchbar input:focus {
     box-shadow: 0 0 1.5rem 0.5rem var(--color-primary-light);
+    transform: translateY(-2px);
 }
 
 .searchbar input::placeholder {
