--- a/src/Components/Navigation.css
+++ b/src/Components/Navigation.css
@@ -3,11 +3,13 @@
     position: fixed;
     bottom: 0;
     z-index: 1;
+    height: 4.8rem;
 }
 .navigation ul {
     list-style: none;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: #d9d9d9;
     padding: 1.2rem 2.4rem;
     color: aliceblue;
@@ -16,4 +18,9 @@
 .navigation li a {
     text-decoration: none;
     font-size: 1.8rem;
+    text-transform: capitalize;
+}
+
+.navigation li a.active {
+    color: var(--color-primary-light);
 }
